--- a/TFE/Base.lproj/Main.storyboard
+++ b/TFE/Base.lproj/Main.storyboard
@@ -512,13 +512,7 @@
                             <outlet property="delegate" destination="OjU-NI-juH" id="1zH-Gd-d18"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Invite Friends" id="bOV-nE-Cl0">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="zy1-8g-a6d">
-                            <connections>
-                                <action selector="unwind:" destination="OjU-NI-juH" id="AWc-Z7-ctv"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Invite Friends" id="bOV-nE-Cl0"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <segue destination="CAL-bQ-3tP" kind="unwind" identifier="Unwind" unwindAction="unwindToFriendTableViewController:" id="W7W-mX-PzW"/>
@@ -617,7 +611,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Status" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xql-tF-3ih">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xql-tF-3ih">
                                 <rect key="frame" x="200" y="147" width="145" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="145" id="1S7-cY-ijq"/>
@@ -627,7 +621,7 @@
                                 <color key="textColor" red="0.20392156862745098" green="0.59607843137254901" blue="0.85882352941176465" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhz-Sa-67K">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhz-Sa-67K">
                                 <rect key="frame" x="318" y="176" width="156" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="156" id="hAW-VP-pKx"/>
@@ -637,14 +631,14 @@
                                 <color key="textColor" red="0.20392156862745098" green="0.59607843137254901" blue="0.85882352941176465" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XgZ-pg-eYC">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XgZ-pg-eYC">
                                 <rect key="frame" x="200" y="176" width="110" height="106"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="NpF-5O-mw0"/>
                                     <constraint firstAttribute="height" constant="106" id="wul-GG-A9t"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cLY-L0-A9W" customClass="FBLoginView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cLY-L0-A9W" customClass="FBLoginView">
                                 <rect key="frame" x="200" y="303" width="200" height="50"/>
                                 <color key="backgroundColor" red="0.0" green="0.39973417291516944" blue="0.78369140625" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -715,9 +709,6 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="Gqv-c5-UJQ"/>
-                                <exclude reference="Hh3-xy-bRG"/>
-                                <exclude reference="IQC-Kf-RqU"/>
                                 <exclude reference="CJP-Sp-ib2"/>
                                 <exclude reference="Kl0-yN-YYs"/>
                                 <exclude reference="o30-nQ-BPR"/>
@@ -730,6 +721,9 @@
                                 <exclude reference="aMd-U0-fuV"/>
                                 <exclude reference="uhN-2D-6tJ"/>
                                 <exclude reference="yxj-iL-Tev"/>
+                                <exclude reference="Gqv-c5-UJQ"/>
+                                <exclude reference="Hh3-xy-bRG"/>
+                                <exclude reference="IQC-Kf-RqU"/>
                                 <exclude reference="drz-TE-rqA"/>
                             </mask>
                         </variation>
@@ -759,7 +753,6 @@
         <!--Splash Screen View Controller-->
         <scene sceneID="080-QB-QtM">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MDY-by-0ds" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="Mcb-ti-RGb" userLabel="Splash Screen View Controller" customClass="SplashScreenViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ftn-my-YhB"/>
@@ -787,6 +780,7 @@
                         <segue destination="wuR-fK-ud5" kind="show" identifier="loggedin" id="qMf-oA-kBL"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MDY-by-0ds" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-365" y="-1477"/>
         </scene>
